@@ -92,7 +92,9 @@ symbols, e.g. "\<^verbatim>", "\<^emph>", "\<^bold>".
 
 * Antiquotation @{theory_text} prints uninterpreted theory source text
 (outer syntax with command keywords etc.). This may be used in the short
-form \<^theory_text>\<open>...\<close>.
+form \<^theory_text>\<open>...\<close>.   @{theory_text [display]} supports option "indent".
+
+* @{verbatim [display]} supports option "indent".
 
 * Antiquotation @{doc ENTRY} provides a reference to the given
 documentation, with a hyperlink in the Prover IDE.
